Fix Trending propics stretching

--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,7 @@ body {
 
 .trending .propic {
     width: 2rem;
+    height: 2rem;
 }
 
 .trending .content {
